--- a/package.json
+++ b/package.json
@@ -1,30 +1,23 @@
 {
   "name": "my-little-pony",
-  "version": "0.1.0",
+  "version": "1.0.0",
+  "license": "MIT",
   "private": true,
   "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-router-dom": "^5.0.0",
-    "react-scripts": "^3.1.2",
-    "styled-components": "^4.3.2"
+    "htm": "^2.2.1",
+    "preact": "^10.0.5",
+    "react-router-dom": "^5.1.2",
+    "styled-components": "^4.4.1"
   },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test"
+  "devDependencies": {
+    "babel-plugin-htm": "^2.2.0",
+    "eslint": "^6.7.2",
+    "eslint-config-airbnb": "^18.0.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.17.0",
+    "eslint-plugin-react-hooks": "^1.7.0",
+    "poi": "^12.7.3"
   },
-  "homepage": "https://acmlp.now.sh/",
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+  "main": "src/index.js"
 }
