--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "eslint-plugin-react-hooks": "^1.7.0",
     "poi": "^12.7.3"
   },
-  "main": "src/index.js"
+  "main": "src/index.jsx",
+  "scripts": {
+    "build": "poi --prod",
+    "start": "poi --serve"
+  }
 }
