--- a/.editorconfig
+++ b/.editorconfig
@@ -1,11 +1,5 @@
 [*]
 end_of_line = lf
 insert_final_newline = true
-
-[*.jsx]
-indent_size = 4
-indent_style = tab
-
-[*.js]
-indent_size = 4
-indent_style = tab
+indent_size = 2
+indent_style = spaces
