--- a/package.json
+++ b/package.json
@@ -12,12 +12,17 @@
   "devDependencies": {
     "babel-plugin-htm": "^2.2.0",
     "eslint": "^6.7.2",
-    "eslint-config-airbnb": "^18.0.1",
-    "eslint-plugin-import": "^2.18.2",
-    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-rem": "^4.0.0",
+    "eslint-config-xo-react": "^0.20.0",
+    "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "poi": "^12.7.3"
+    "husky": "^3.1.0",
+    "lint-staged": "^10.0.0-beta.14",
+    "poi": "^12.7.3",
+    "prettier": "^1.19.1",
+    "xo": "^0.25.3"
   },
   "main": "src/index.jsx",
   "scripts": {
