--- a/.editorconfig
+++ b/.editorconfig
@@ -1,5 +1,8 @@
+root = true
+
 [*]
 end_of_line = lf
 insert_final_newline = true
 indent_size = 2
 indent_style = spaces
+trim_trailing_whitespace = true
