--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "htm": "^2.2.1",
     "preact": "^10.1.1",
     "prop-types": "^15.7.2",
-    "react-router-dom": "^5.1.2",
-    "styled-components": "^4.4.1"
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
@@ -28,7 +27,6 @@
     "lint-staged": "^10.0.0-beta.14",
     "poi": "^12.7.3",
     "prettier": "^1.19.1",
-    "react-devtools": "^4.3.0",
     "xo": "^0.25.3"
   },
   "main": "src/index.jsx",
@@ -68,7 +66,9 @@
       "react/prop-types": [
         "error",
         {
-          "ignore": ["children"]
+          "ignore": [
+            "children"
+          ]
         }
       ],
       "no-unused-vars": [
