:paintbrush: Use components list to reduce code size

--- a/package.json
+++ b/package.json
@@ -76,7 +76,8 @@
         {
           "varsIgnorePattern": "Fragment"
         }
-      ]
+      ],
+      "react/no-array-index-key": 0
     }
   },
   "lint-staged": {
