--- a/package.json
+++ b/package.json
@@ -10,36 +10,44 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.0.3",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.9.0",
     "eslint-config-rem": "^4.0.0",
     "eslint-config-xo": "^0.27.2",
+    "eslint-config-xo-flow": "^0.1.0",
     "eslint-config-xo-react": "^0.20.0",
     "eslint-plugin-ava": "^9.0.0",
     "eslint-plugin-eslint-comments": "^3.1.2",
+    "eslint-plugin-flowtype": "^4.5.2",
     "eslint-plugin-import": "^2.19.1",
     "eslint-plugin-node": "^11.0.0",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "eslint-plugin-unicorn": "^15.0.1",
+    "flow-bin": "^0.114.0",
     "husky": "^3.1.0",
     "lint-staged": "^10.0.0-beta.14",
+    "node-sass": "^4.13.0",
     "poi": "^12.7.3",
     "prettier": "^1.19.1",
+    "sass-loader": "^8.0.0",
     "xo": "^0.25.3"
   },
   "main": "src/index.jsx",
   "scripts": {
     "build": "poi --prod",
-    "start": "poi --serve"
+    "dev": "poi --serve"
   },
   "xo": {
     "extends": [
       "rem",
+      "xo-flow",
       "xo-react",
       "plugin:prettier/recommended",
-      "prettier/react"
+      "prettier/react",
+      "prettier/flowtype"
     ],
     "env": [
       "browser"
@@ -77,7 +85,9 @@
           "varsIgnorePattern": "Fragment"
         }
       ],
-      "react/no-array-index-key": 0
+      "react/no-array-index-key": 0,
+      "flowtype/require-return-type": 0,
+      "flowtype/no-weak-types": 0
     }
   },
   "lint-staged": {
@@ -92,5 +102,6 @@
     "hooks": {
       "pre-commit": "lint-staged"
     }
-  }
+  },
+  "sideEffect": false
 }
