--- a/package.json
+++ b/package.json
@@ -87,7 +87,8 @@
       ],
       "react/no-array-index-key": 0,
       "flowtype/require-return-type": 0,
-      "flowtype/no-weak-types": 0
+      "flowtype/no-weak-types": 0,
+      "flowtype/require-parameter-type": 0
     }
   },
   "lint-staged": {
