--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
     "eslint-config-prettier": "^6.11.0",
     "eslint-config-rem": "^4.0.0",
     "eslint-config-xo-react": "^0.23.0",
